--- a/main.html
+++ b/main.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Time and Space Complexity</title>
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+    <h1>Time, Space, Complexity</h1>
+
+    <p>Time complexity is a measure of the amount of time an algorithm takes to complete based on the input size. An algorithm is considered efficient if it accomplishes its task with minimal time complexity, ensuring optimal performance in various scenarios.</p>
+
+    <p>Space Complexity refers to the amount of memory space an algorithm requires to complete its task based on the input size. One commonly used notation to denote space complexity is O(n), where 'n' represents the input size. <b>Space Complexity</b> focuses on managing memory efficiently to ensure optimal usage.</p>
 
 </body>
 
